--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,3 +1,6 @@
+DirectoryIndex index.php
+IndexIgnore .htaccess */.??*
+
 ErrorDocument 404 /?page=404
 Options +FollowSymLinks +ExecCGI
 
@@ -6,3 +9,14 @@ Options +FollowSymLinks +ExecCGI
   RewriteCond %{REQUEST_URI} !^/?(assets)/
   RewriteRule ^(.*)$ index.php [QSA,PT,L]
 </IfModule>
+
+<Limit GET POST>
+order deny,allow
+deny from all
+allow from all
+</Limit>
+
+<Limit PUT DELETE>
+order deny,allow
+deny from all
+</Limit>
