--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build/ # output directory for jekyll
+
 # OSX
 .DS_Store
 .AppleDouble
@@ -5,7 +7,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -87,4 +88,3 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
-
